--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
-    "private": true,
-    "name": "{{ NERDPACK_NAME }}",
-    "description": "Nerdpack template",
-    "version": "0.1.0",
-    "scripts": {
-        "start": "nr1 nerdpack:serve",
-        "test": "exit 0",
-        "eslint-check": "eslint nerdlets/",
-        "eslint-fix": "eslint nerdlets/ --fix"
-    },
-    "bugs": {
-        "email": "opensource+{{ NERDPACK_NAME }}@newrelic.com"
-    },
-    "dependencies": {
-        "@newrelic/nr1-community": "latest",
-        "prop-types": "^15.6.2"
-    },
-    "browserslist": [
-        "last 2 versions",
-        "not ie < 11",
-        "not dead"
-    ],
-    "devDependencies": {
-        "@newrelic/eslint-plugin-newrelic": "^0.3.1",
-        "@semantic-release/changelog": "^5.0.1",
-        "@semantic-release/git": "^9.0.0",
-        "eslint": "^6.8.0",
-        "prettier": "^1.19.1",
-        "react": "16.6.3",
-        "react-dom": "16.6.3"
-    }
+  "private": true,
+  "name": "nr1-kentik-network-monitoring",
+  "description": "Custom visualizations for Kentik network data",
+  "version": "0.1.0",
+  "scripts": {
+    "start": "nr1 nerdpack:serve",
+    "test": "exit 0",
+    "eslint-check": "eslint visualizations/",
+    "eslint-fix": "eslint visualizations/ --fix"
+  },
+  "bugs": {
+    "email": "opensource+nr1-kentik-network-monitoring@newrelic.com"
+  },
+  "dependencies": {
+    "@newrelic/nr1-community": "latest",
+    "prop-types": "^15.6.2",
+    "classnames": "^2.3.1",
+    "d3-sankey": "^0.12.3",
+    "d3-selection": "^2.0.0",
+    "leaflet": "^1.7.1",
+    "react-leaflet": "^2.8.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
+  },
+  "browserslist": [
+    "last 2 versions",
+    "not ie < 11",
+    "not dead"
+  ],
+  "devDependencies": {
+    "@newrelic/eslint-plugin-newrelic": "^0.3.1",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "eslint": "^6.8.0",
+    "prettier": "^1.19.1"
+  }
 }
